--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,10 @@
             <artifactId>opintopolku-cas-servlet-filter</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.jasig.cas.client</groupId>
+            <artifactId>cas-client-support-distributed-ehcache</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
         </dependency>
