--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
                 <version>0.1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
+                <groupId>fi.vm.sade.java-utils</groupId>
+                <artifactId>opintopolku-cas-servlet-filter</artifactId>
+                <version>0.1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>org.jasig.cas.client</groupId>
                 <artifactId>cas-client-support-distributed-ehcache</artifactId>
                 <version>3.4.1</version>
