--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,6 @@
     <packaging>jar</packaging>
 
     <properties>
-        <valintaperusteet-ui.mainClass>fi.vm.sade.valintaperusteet.ValintaperusteUiJetty</valintaperusteet-ui.mainClass>
-
         <frontend-maven-plugin.version>1.7.6</frontend-maven-plugin.version>
         <spring.asm.version>3.1.4.RELEASE</spring.asm.version>
         <spring.version>5.1.5.RELEASE</spring.version>
@@ -467,23 +465,6 @@ buildTtime=${maven.build.timestamp}
               </executions>
           </plugin>
         </plugins>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <configuration>
-                        <mainClass>${valintaperusteet-ui.mainClass}</mainClass>
-                        <systemProperties>
-                            <systemProperty>
-                                <key>user.home</key>
-                                <value>${env.VALINTAPERUSTEET_UI_USER_HOME}</value>
-                            </systemProperty>
-                        </systemProperties>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
 
     <repositories>
@@ -513,4 +494,67 @@ buildTtime=${maven.build.timestamp}
             <url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
         </repository>
     </repositories>
+    <profiles>
+        <profile>
+            <id>opintopolku-local</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.github.eirslett</groupId>
+                        <artifactId>frontend-maven-plugin</artifactId>
+                        <version>${frontend-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>install node and npm</id>
+                                <phase />
+                            </execution>
+                            <execution>
+                                <id>npm install</id>
+                                <phase />
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>opintopolku-local-frontend-compilation</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>${maven-antrun-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>write buildversion.txt</id>
+                                <phase />
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <version>3.8.0</version>
+                        <executions>
+                            <execution>
+                                <id>default-compile</id>
+                                <phase />
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>3.2.1</version>
+                        <executions>
+                            <execution>
+                                <phase />
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
