--- a/pom.xml
+++ b/pom.xml
@@ -450,7 +450,7 @@ buildTtime=${maven.build.timestamp}
                               <transformer
                                 implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                   <manifestEntries>
-                                      <Main-Class>${valintaperusteet-ui.mainClass}</Main-Class>
+                                      <Main-Class>fi.vm.sade.valintaperusteet.ValintaperusteUiJetty</Main-Class>
                                   </manifestEntries>
                               </transformer>
                               <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
