--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
 - mv target/valintaperusteet-ui-*allinone.jar $DOCKER_BUILD_DIR/artifact/${ARTIFACT_NAME}.jar
 - cp -vr src/main/resources/oph-configuration $DOCKER_BUILD_DIR/config/
 
-- export BASE_IMAGE="baseimage-fatjar:jdk11"
+- export BASE_IMAGE="baseimage-fatjar-openjdk11:master"
 - ./ci-tools/common/pull-image.sh
 - ./ci-tools/build/build-fatjar.sh $ARTIFACT_NAME
 
