--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
 - export ARTIFACT_NAME="valintaperusteet-ui"
 
 script:
+- ./bin/run-spotless-in-travis.sh
 - mvn clean package -B -Dbranch=${TRAVIS_BRANCH} -Drevision=${TRAVIS_COMMIT} -DbuildNumber=${TRAVIS_BUILD_NUMBER}
 
 - mv target/valintaperusteet-ui-*allinone.jar $DOCKER_BUILD_DIR/artifact/${ARTIFACT_NAME}.jar
