--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "./src/**/*.{js,jsx,ts,tsx}": [
       "./bin/run-eslint-pre-commit.sh"
     ],
+    "./src/**/*.java": [
+      "./bin/run-spotless-pre-commit.sh"
+    ]
   },
   "devDependencies": {
     "bower": "^1.8.8",
