--- a/src/main/resources/oph-configuration/valintaperusteet-ui.yml.template
+++ b/src/main/resources/oph-configuration/valintaperusteet-ui.yml.template
@@ -17,7 +17,7 @@ host:
   host-cas: {{host_cas}}
   host-alb: {{host_alb}}
 
-valintalaskenta-ui:
+valintaperusteet-ui:
   uses-ssl-proxy: true
   session-keepalive-interval.seconds: 150
   session-max-idle-time.seconds: 1800
